# hal_nxp

./: .gitignore  CMakeLists.txt  Kconfig  README.md  scr-hal.txt  sdk_ng_mig.py
mcux/: CMakeLists.txt  README  hal_nxp.cmake  hwmv1.cmake  nocache.ld  quick_access_code.ld  quick_access_data.ld
mcux/boards/: CMakeLists.txt
mcux/boards/evkmimxrt1010/: board.h  evkmimxrt1010_flexspi_nor_config.c
mcux/boards/evkmimxrt1015/: board.h  evkmimxrt1015_flexspi_nor_config.c  evkmimxrt1015_flexspi_nor_config.h
mcux/boards/evkmimxrt1020/: board.h  dcd.c  evkmimxrt1020_flexspi_nor_config.c  evkmimxrt1020_sdram_ini_dcd.c
mcux/boards/evkmimxrt1024/: board.h
mcux/boards/evkmimxrt1060/: board.h
mcux/boards/evkmimxrt1064/: board.h
mcux/boards/evkmimxrt1170/: board.h  display_support.c  sdmmc_config.c  sdmmc_config.h
mcux/boards/evkmimxrt685/: flash_config.c  flash_config.h
mcux/components/: CMakeLists.txt
mcux/components/phydp83825/: fsl_phy.h
mcux/components/phyksz8081/: fsl_phy.c  fsl_phy.h
mcux/devices/K32L2B11A/: K32L2B11A.h  K32L2B11A_features.h  fsl_clock.h
mcux/devices/K32L2B21A/: K32L2B21A.h  K32L2B21A.xml  K32L2B21A_features.h  fsl_clock.c
mcux/devices/K32L2B31A/: K32L2B31A.h  K32L2B31A_features.h  system_K32L2B31A.c  system_K32L2B31A.h
mcux/devices/LPC51U68/: LPC51U68.xml
mcux/devices/LPC54114/: LPC54114_cm0plus.h  LPC54114_cm0plus.xml  LPC54114_cm4.h  LPC54114_cm4.xml  fsl_power.h  system_LPC54114_cm0plus.c  system_LPC54114_cm4.c
mcux/devices/LPC55S16/: LPC55S16.h  LPC55S16.xml  LPC55S16_features.h  fsl_clock.c  fsl_clock.h  fsl_power.h  fsl_reset.c  fsl_reset.h  system_LPC55S16.c  system_LPC55S16.h
mcux/devices/LPC55S28/: LPC55S28.h  LPC55S28.xml  LPC55S28_features.h  fsl_clock.h  fsl_power.h
mcux/devices/LPC55S69/: LPC55S69_cm33_core0.xml  LPC55S69_cm33_core1.h  LPC55S69_cm33_core1.xml  LPC55S69_cm33_core1_features.h  fsl_clock.c  fsl_clock.h  fsl_power.h  system_LPC55S69_cm33_core0.c  system_LPC55S69_cm33_core0.h  system_LPC55S69_cm33_core1.c  system_LPC55S69_cm33_core1.h
mcux/devices/MIMX8MM6/: MIMX8MM6_cm4_features.h  fsl_clock.c  fsl_clock.h  fsl_device_registers.h  fsl_iomuxc.h  system_MIMX8MM6_cm4.c  system_MIMX8MM6_cm4.h
mcux/devices/MIMXRT1015/: MIMXRT1015.h  MIMXRT1015_features.h  fsl_clock.c  fsl_clock.h  fsl_iomuxc.h  system_MIMXRT1015.c
mcux/devices/MIMXRT1021/: MIMXRT1021.h  MIMXRT1021_features.h  fsl_clock.h
mcux/devices/MIMXRT1024/: MIMXRT1024.h  fsl_flexspi_nor_boot.h
mcux/devices/MIMXRT1051/: MIMXRT1051.h  MIMXRT1051_features.h  fsl_clock.c  fsl_clock.h  system_MIMXRT1051.c  system_MIMXRT1051.h
mcux/devices/MIMXRT1052/: MIMXRT1052.h  fsl_flexspi_nor_boot.h
mcux/devices/MIMXRT1061/: MIMXRT1061.h  MIMXRT1061_features.h  fsl_iomuxc.h  system_MIMXRT1061.c
mcux/devices/MIMXRT1062/: MIMXRT1062.h
mcux/devices/MIMXRT1064/: MIMXRT1064.h  fsl_flexspi_nor_boot.h
mcux/devices/MIMXRT1166/: fsl_clock.h  fsl_flexspi_nor_boot.h
mcux/devices/MIMXRT1176/: MIMXRT1176_cm4_features.h  fsl_dcdc.h  fsl_flexspi_nor_boot.h  fsl_gpc.c  fsl_gpc.h  fsl_nic301.h  fsl_pgmc.c  fsl_pgmc.h  fsl_romapi.c  fsl_soc_src.c  fsl_soc_src.h  system_MIMXRT1176_cm4.c  system_MIMXRT1176_cm4.h  system_MIMXRT1176_cm7.c  system_MIMXRT1176_cm7.h
mcux/devices/MIMXRT685S/: MIMXRT685S_cm33.h  MIMXRT685S_cm33_features.h  MIMXRT685S_dsp.h  MIMXRT685S_dsp_features.h  fsl_clock.c  fsl_clock.h  fsl_power.h  fsl_reset.h  system_MIMXRT685S_cm33.c  system_MIMXRT685S_cm33.h  system_MIMXRT685S_dsp.c
mcux/devices/MK20D10/: MK20D10.h  fsl_clock.c  fsl_clock.h  fsl_device_registers.h  system_MK20D10.c  system_MK20D10.h
mcux/devices/MK22FA12/: MK22FA12.h  MK22FA12_features.h  fsl_device_registers.h  system_MK22FA12.c  system_MK22FA12.h
mcux/devices/MK60D10/: MK60D10.h  fsl_clock.h  fsl_device_registers.h  system_MK60D10.c  system_MK60D10.h
mcux/devices/MK64F12/: MK64F12.h  MK64F12_features.h  fsl_clock.c  fsl_clock.h  system_MK64F12.c
mcux/devices/MK66F18/: MK66F18.h  MK66F18_features.h  fsl_clock.c  fsl_clock.h  system_MK66F18.c  system_MK66F18.h
mcux/devices/MK80F25615/: MK80F25615_features.h  fsl_clock.c  fsl_clock.h  system_MK80F25615.c
mcux/devices/MK82F25615/: MK82F25615_features.h  fsl_clock.h  system_MK82F25615.c
mcux/devices/MKE14F16/: MKE14F16_features.h  fsl_clock.h  system_MKE14F16.c  system_MKE14F16.h
mcux/devices/MKE16F16/: MKE16F16.h  MKE16F16_features.h  fsl_clock.c  fsl_clock.h  system_MKE16F16.c  system_MKE16F16.h
mcux/devices/MKE18F16/: MKE18F16.h  MKE18F16_features.h  fsl_clock.h
mcux/devices/MKL46Z4/: MKL46Z4.h  MKL46Z4_features.h  fsl_clock.c  fsl_clock.h  fsl_device_registers.h  system_MKL46Z4.c  system_MKL46Z4.h
mcux/devices/MKS22F12/: MKS22F12.h  MKS22F12_features.h  fsl_clock.c  fsl_clock.h  fsl_device_registers.h  system_MKS22F12.c  system_MKS22F12.h
mcux/devices/MKV56F24/: MKV56F24.h  MKV56F24_features.h
mcux/devices/MKV58F24/: MKV58F24.h  MKV58F24_features.h  fsl_clock.c  fsl_clock.h
mcux/drivers/: CMakeLists.txt
mcux/drivers/imx/: CMakeLists.txt  fsl_adc_etc.h  fsl_asrc.c  fsl_asrc.h  fsl_asrc_edma.h  fsl_dac12.h  fsl_dcic.c  fsl_dcic.h  fsl_edma.c  fsl_enet.c  fsl_enet_qos.c  fsl_enet_qos.h  fsl_flexcan.c  fsl_flexcan.h  fsl_flexram.h  fsl_flexram_allocate.c  fsl_flexram_allocate.h  fsl_flexspi.c  fsl_flexspi.h  fsl_flexspi_nor_boot.c  fsl_flexspi_nor_boot.h  fsl_iee.c  fsl_iee_apc.c  fsl_key_manager.c  fsl_key_manager.h  fsl_lcdifv2.c  fsl_lcdifv2.h  fsl_lpspi.c  fsl_mecc.c  fsl_mecc.h  fsl_mipi_dsi.c  fsl_mipi_dsi.h  fsl_pdm_edma.h  fsl_pxp.c  fsl_snvs_hp.h  fsl_snvs_lp.c  fsl_snvs_lp.h  fsl_ssarc.h  fsl_tempsensor.c  fsl_tempsensor.h  (+1 more)
mcux/mcux-sdk/: LA_OPT_NXP_Software_License.txt  all_devices.cmake
mcux/mcux-sdk-ng/: README
mcux/middleware/: CMakeLists.txt
mcux/scripts/: import_mcux_sdk.py  imx_cfg_utils.py  imx_fixup_pinmux.py  imx_gen_dts.py  imx_gen_headers.py  kinetis_cfg_utils.py  kinetis_gen_dts.py  kinetis_gen_headers.py  kinetis_signal2dts.py  lpc_cfg_utils.py  lpc_gen_dts.py  lpc_gen_headers.py  sync_sdk_ng.py
mcux/zephyr/: CMakeLists.txt
s32/: CMakeLists.txt  README
(+19626 files in other folders)
