# Copyright 2024 NXP
# SPDX-License-Identifier: BSD-3-Clause

add_subdirectory(BaseNXP)
add_subdirectory_ifdef(CONFIG_CAN_NXP_S32_CANXL Can_CANEXCEL)
add_subdirectory_ifdef(CONFIG_ETH_NXP_S32_NETC Eth_NETC)
add_subdirectory_ifdef(CONFIG_ETH_NXP_S32_NETC EthSwt_NETC)
add_subdirectory_ifdef(CONFIG_CLOCK_CONTROL_NXP_S32 Mcu)
add_subdirectory_ifdef(CONFIG_MBOX_NXP_S32_MRU Platform)
add_subdirectory(Rte)
add_subdirectory_ifdef(CONFIG_NXP_S32_SPI Spi)
add_subdirectory_ifdef(CONFIG_UART_NXP_S32_LINFLEXD Uart)
